        client/help/C/images/status.png,
        client/help/C/images/servers-dialog.png,
        client/help/C/images/connect-dialog.png,
        client/help/C/images/develop-cards.png
        client/help/C/images/legend-dialog.png: Updated screenshots for 0.9.61
	* docs/pioneers.6, docs/pioneers-server-console.6,
	docs/pioneers-server-gtk.6: Updated the man pages

2005-04-08  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/gui.c: Disable the unused menu item 'Leave Game'
	
2005-04-06  Bas Wijnen <shevek@fmf.nl>
	* common/game.c: Remove compiler warnings.

2005-04-03  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/guimap.c, common/gtk/guimap.h, client/gtk/interface.c,
	client/gtk/gui.c, client/gtk/gui.h: Implemented 'single click build'
	for the movement of ships. (Click anywhere to cancel)
	* client/gtk/gui.c: Always show the map after a (re)connect.
	* Makefile.am: let 'make restorepo' work with Subversion.
	* configure.ac, Makefile.am, macros/Makefile.am: add the macros
	subdirectory in the tarball (without the .svn directory)
	* client/common/player.c: Remove compiler warnings

2005-04-02  0.9.61 Bas Wijnen <shevek@fmf.nl>
	* server/gtk/main.c: Split interface for running and non-running
	state.
	* client/common/develop.c: Disallow road building if there's no place
	to build it.
	* client/ai/greedy.c: Do a proper check for roadbuilding.

2005-03-30  0.9.57 Roland Clobus <rclobus@bigfoot.com>
	* client/help/C/pioneers.xml: Updated documentation. Corrected spelling
	to en_us.
	* client/callback.h, client/common/chat.c, client/common/client.h,
	client/common/player.c: Fixed a crash in the client when a /beep is
	sent when not all players are present yet.
	* server/meta.c, server/server.c, server/server.h: Unregister from the
	meta-server when the server stops.
	* client/gtk/gui.c: Activate the map page when trade tabs have been
	shown. Also hide the legend tab page after a connect (when turned off
	in the preferences).
